This file documents the revision history for mod_gearman.

1.2.8  not yet released
          - add new new option 'accept_clear_results'

1.2.6  Mon Mar 12 15:14:21 CET 2012
          - set worker queue by custom variable
          - disabled default max job age check
          - added docs in sample config about max-age
          - added usefull message when epn plugin does not call exit()
          - added new option dup_results_are_passive
          - fixed "Could Not Start Check In Time" problem

1.2.4  Mon Feb 27 23:54:39 CET 2012
          - fixed eventhandlers not being passed to worker
          - fixed shared memory not beeing cleaned on exit
          - internal changes to support freebsd

1.2.2  Tue Feb  7 18:06:02 CET 2012
          - orphaned hosts/services generate a fake result with useful error message
          - bypass eventhandler from hosts/services in local host/servicegroups
          - fixed NAGIOS_PLUGIN env in epn

1.2.0  Sun Jan  8 18:42:56 CET 2012
          - added embedded perl support (see README for details)
          - added uniq key option for check_gearman (kgovande)
          - added contrib folder
            - added Gearman-Proxy to syncronize jobserver
          - splitted default config in neb module and worker

1.1.1  Thu Nov 10 11:15:48 CET 2011
          - check_gearman can now send background jobs (Justin Kerr Sheckler)
          - fixed problem which skipped some checks when they were rescheduled
            by the core smart scheduler
          - use md5sum as uniq key for long host/servicesnames
            this fixes a possible lost jobs when 2 very long host/servicesnames
            are scheduled at the same time

1.1.0  Wed Oct 12 18:36:10 CEST 2011
          - fixed send_multi performance data headers
          - fixed segfault when worker runs into timeout

1.0.10 Thu Aug 25 16:07:55 CEST 2011
          - new option 'show_error_output' for worker
          - fixed failed job when host+service > 64 chars